# async-aggregation-pipeline

./: Cargo.toml  LICENSE  readme.md
examples/: dummy_pipeline.rs  dynamic_dispatch.rs  number_filter.rs  test_shutdown.rs
src/: aggregator.rs  async_sender.rs  error.rs  lib.rs  output_filter.rs  pipeline.rs
src/utils/filters/: balancer.rs  mod.rs
