[package]
name = "async-aggregation-pipeline"
version = "0.2.0"
edition = "2021"
authors = ["Madeline S. <maddie@cafebabe.date>"]
license = "ISC"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.52"
crossbeam-channel = "0.5.1"
futures = "0.3.21"
tokio = { version = "1.15.0", features = ["time", "rt", "signal"] }
tracing = "0.1.29"

[dev-dependencies]
tokio = { version = "1.15.0", features = ["full"] }
async-trait = "0.1.52"
tracing-subscriber = { version = "0.3.8", features = ["env-filter"] }
